[gd_scene load_steps=7 format=2]

[ext_resource path="res://Eunseo/Images/Box3.png" type="Texture" id=1]
[ext_resource path="res://Eunseo/Scenes/Box.gd" type="Script" id=2]
[ext_resource path="res://Eunseo/Images/light.png" type="Texture" id=3]
[ext_resource path="res://Eunseo/Images/Box5.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=91]
extents = Vector2( 15.25, 14.75 )

[sub_resource type="RectangleShape2D" id=92]
extents = Vector2( 15.25, 12.5 )

[node name="Box" type="StaticBody2D"]
scale = Vector2( 1.33037, 1.33037 )
script = ExtResource( 2 )

[node name="light" type="Sprite" parent="."]
position = Vector2( 2, 4 )
scale = Vector2( 0.915816, 0.915816 )
texture = ExtResource( 3 )

[node name="BoxUnopen" type="Sprite" parent="."]
position = Vector2( 1, -5 )
scale = Vector2( 1.15625, 1.15625 )
texture = ExtResource( 1 )

[node name="BoxOpen" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -5 )
scale = Vector2( 1.15625, 1.15625 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.75, -0.75 )
shape = SubResource( 91 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 26.5 )
shape = SubResource( 92 )

[node name="Button" type="Button" parent="."]
visible = false
margin_left = -20.9053
margin_top = -40.7938
margin_right = 26.0947
margin_bottom = -20.7938
text = "Open"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
